[package]
name = "pierx"
version = "0.1.0"
description = "Pier-X — cross-platform terminal / Git / SSH / database management tool (Tauri runtime)"
authors = ["chenqi"]
license = "MIT"
repository = "https://github.com/chenqi92/Pier-X"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pierx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` exposes `open_devtools()` / `close_devtools()` on the webview
# window. The IPC command that uses them is `cfg(debug_assertions)`-gated,
# and the frontend only binds the shortcut in dev — so release builds have
# no path that reaches DevTools.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pier-core = { path = "../pier-core" }

