[package]
name = "pier-x-completions-importer"
version = "0.1.0"
edition = "2021"
publish = false
description = "Off-line tool: extract command-completion data from <cmd> --help / man / completion scripts and emit Pier-X JSON packs."

[[bin]]
name = "pier-x-completions-importer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
env_logger = "0.11"
pier-core = { path = "../../pier-core" }
